resize img /rename

--- a/Projet_2.html
+++ b/Projet_2.html
@@ -2,7 +2,8 @@
 <html>
   <header>
     <meta charset="utf-8" />
-    <title>Projet 2</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Réservia</title>
 
     <p>
       <img src="Projet 2 - Reservia\images\logo\Reservia.png" alt="logo" />
@@ -39,18 +40,23 @@
     </div>
 
     <div id="home">
-      <p><strong>Hébergement à Marseille</strong></p>
-      <div class="Auberge la Cannebière">
-        <a href="#">
+      <strong>Hébergement à Marseille</strong>
+      <div class="img1">
+        <a
+          href="Projet 2 - Reservia\images\hebergements\2_large\marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+        >
           <img
             src="Projet 2 - Reservia\images\hebergements\4_small\auberge.jpg"
         /></a>
-        <p>
-          <strong>Auberge la Cannebière</strong> <br />
-          Nuit à partir de
-          <strong>25€</strong>
-        </p>
+        <div class="container">
+          <p>
+            <strong>Auberge la Cannebière</strong> <br />
+            Nuit à partir de
+            <strong>25€</strong>
+          </p>
+        </div>
       </div>
+
       <div class="Hôtel du port">
         <a href="#">Hôtel du port</a>
       </div>
