--- a/Projet_2.html
+++ b/Projet_2.html
@@ -6,7 +6,7 @@
     <title>Réservia</title>
 
     <p>
-      <img src="Projet 2 - Reservia\images\logo\Reservia.png" alt="logo" />
+      <img src="images\logo\Reservia.png" alt="logo" />
     </p>
 
     <div>
@@ -24,96 +24,113 @@
   </header>
 
   <body>
-    <div id="search">
-      <div class="topnav">
-        <div class="search-container">
-          <form action="/action_page.php">
-            <input
-              type="text"
-              placeholder="Votre recherche ici"
-              name="search"
-            />
-            <button type="submit">Rechercher</button>
-          </form>
+    <div class="container">
+      <div
+        class="home"
+        style="background-image: url(images/hebergements/4_small/auberge.jpg)"
+      >
+        <a
+          href="images\hebergements\2_large\marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+        >
+        </a>
+        <div class="description">
+          <strong>Auberge la Cannebière</strong><br />Nuit à partir de
+          <strong>25€</strong>
         </div>
       </div>
-    </div>
 
-    <div id="home">
-      <strong>Hébergement à Marseille</strong>
-      <div class="img1">
+      <div class="home">
         <a
-          href="Projet 2 - Reservia\images\hebergements\2_large\marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+          href="images\hebergements\2_large\fred-kleber-gTbaxaVLvsg-unsplash.jpg"
         >
           <img
-            src="Projet 2 - Reservia\images\hebergements\4_small\auberge.jpg"
-        /></a>
-        <div class="container">
-          <p>
-            <strong>Auberge la Cannebière</strong> <br />
-            Nuit à partir de
-            <strong>25€</strong>
-          </p>
+            src="images\hebergements\4_small\hotel_du_port.jpg"
+            alt="Hôtel du port"
+          />
+        </a>
+        <div class="description">
+          <strong>Hôtel du port</strong><br />Nuit à partir de<strong
+            >52€</strong
+          >
         </div>
       </div>
 
-      <div class="Hôtel du port">
-        <a href="#">Hôtel du port</a>
+      <div class="home">
+        <a
+          href="images\hebergements\2_large\reisetopia-B8WIgxA_PFU-unsplash.jpg"
+        >
+          <img
+            src="images\hebergements\4_small\hotel_les_mouettes.jpg"
+            alt="Hôtel Les mouettes"
+          />
+        </a>
+        <div class="description">
+          <strong>Hôtel Les mouettes</strong><br />Nuit à partir de<strong
+            >76€</strong
+          >
+        </div>
       </div>
 
-      <div class="Hôtel Les mouettes"><a href="#">Hôtel Les mouettes</a></div>
-      <div class="Hôtel de la mer"><a href="#">Hôtel de la mer</a></div>
-      <div class="Auberge Le Panier"><a href="#">Auberge Le Panier</a></div>
-      <div class="Hôtel chez Amina"><a href="#">Hôtel chez Amina</a></div>
-      <div class="Afficher plus">
-        <a href="#"><strong>Afficher plus</strong></a>
+      <div class="home">
+        <a
+          href="images\hebergements\2_large\annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+        >
+          <img
+            src="images\hebergements\4_small\hotel_de_la_mer.jpg"
+            alt="Hôtel de la mer"
+          />
+        </a>
+        <div class="description">
+          <strong>Hôtel de la mer</strong><br />Nuit à partir de<strong
+            >46€</strong
+          >
+        </div>
       </div>
-    </div>
 
-    <div id="top">
-      <p>Les plus populaires</p>
-      <div class="Hôtel Le soleil du matin">
-        <a href="#">Hôtel Le soleil du matin</a>
+      <div class="home">
+        <a href="#">
+          <img src="#" alt="Auberge Le Panier" />
+        </a>
+        <div class="description">
+          <strong>Auberge Le Panier</strong><br />Nuit à partir de<strong
+            >23€</strong
+          >
+        </div>
       </div>
-      <div class="Au cœur de l'eau Chambres d'hôtes">
-        <a href="#"> Au cœur de l'eau Chambres d'hôtes</a>
-      </div>
-      <div class="Hôtel Le soleil du matin"></div>
-    </div>
 
-    <div id="activités">
-      <p>Activités à Marseille</p>
-      <div class="Vieux Port"><a href="#">Vieux Port</a></div>
-      <div class="Fort de Pomègues"><a href="#">Fort de Pomègues</a></div>
-      <div class="Îles du Frioul"><a href="#">Îles du Frioul</a></div>
-      <div class="Parc National des Calanques">
-        <a href="#">Parc National des Calanques</a>
+      <div class="home">
+        <a href="#">
+          <img src="#" alt="Hôtel chez Amina" />
+        </a>
+        <div class="description">
+          <strong>Hôtel chez Amina</strong><br />Nuit à partir de<strong
+            >96€</strong
+          >
+        </div>
       </div>
-      <div class="Notre-Dame-de-la-Garde">
-        <a href="#">Notre-Dame-de-la-Garde</a>
-      </div>
-      <div class="Parc Longchamp"><a href="#">Parc Longchamp</a></div>
     </div>
   </body>
 
   <footer>
-    <ol>
-      <il><strong>A propos</strong><br /></il>
-      <il><a href="#">Fonctionnement du site</a><br /></il>
-      <il><a href="#">Condition générales de vente</a><br /></il>
-      <il><a href="#">Donnée et confidentialité</a><br /></il>
-    </ol>
+    <div>
+      <ol>
+        <il><strong>A propos</strong><br /></il>
+        <il><a href="#">Fonctionnement du site</a><br /></il>
+        <il><a href="#">Condition générales de vente</a><br /></il>
+        <il><a href="#">Donnée et confidentialité</a><br /></il>
+      </ol>
 
-    <ol>
-      <il><strong>Nos hébergements</strong><br /></il>
-      <il><a href="#">Charte qualité</a><br /></il>
-      <il><a href="#">Soumettre votre hôtel</a><br /></il>
-    </ol>
+      <ol>
+        <il><strong>Nos hébergements</strong><br /></il>
+        <il><a href="#">Charte qualité</a><br /></il>
+        <il><a href="#">Soumettre votre hôtel</a><br /></il>
+      </ol>
 
-    <ol>
-      <il><strong>Assistance</strong><br /></il>
-      <il><a href="#">Centre d'aide</a><br /></il>
-      <il><a href="#">Nous contacter</a><br /></il>
-    </ol>
+      <ol>
+        <il><strong>Assistance</strong><br /></il>
+        <il><a href="#">Centre d'aide</a><br /></il>
+        <il><a href="#">Nous contacter</a><br /></il>
+      </ol>
+    </div>
   </footer>
 </html>
