--- a/Projet_2.html
+++ b/Projet_2.html
@@ -49,22 +49,32 @@
       </div>
 
       <div id="filtre">
-        <div class="btn-wrapper">
-          <button type="button" class="btn">Économique</button>
-        </div>
-        <div class="btn-wrapper">
-          <button type="button" class="btn">Familial</button>
-        </div>
-        <div class="btn-wrapper">
-          <button type="button" class="btn">Romantique</button>
-        </div>
-        <div class="btn-wrapper">
-          <button type="button" class="btn">Animaux autorisés</button>
+        <p><strong>Filtres</strong></p>
+        <div class="fltrebtn">
+          <button type="button" class="btn">
+            <span class="btnIcon"><i class="fas fa-money-bill-wave"></i></span>
+            <span class="btnText">Économique</span>
+          </button>
+
+          <button type="button" class="btn">
+            <span class="btnIcon"><i class="fas fa-child"></i></span>
+            <span class="btnText">Familial</span>
+          </button>
+
+          <button type="button" class="btn">
+            <span class="btnIcon"><i class="fas fa-heart"></i></span>
+            <span class="btnText">Romantique</span>
+          </button>
+
+          <button type="button" class="btn">
+            <span class="btnIcon"><i class="fas fa-dog"></i></span>
+            <span class="btnText">Animaux autorisés</span>
+          </button>
         </div>
       </div>
 
       <div id="information">
-        <p>Plus de 500 logements sont disponible dans cette ville</p>
+        <p>Plus de 500 logements sont disponibles dans cette ville</p>
       </div>
       <div class="container">
         <div
