--- a/Projet_2.html
+++ b/Projet_2.html
@@ -73,22 +73,133 @@
         </div>
       </div>
 
-      <div id="information">
-        <p>Plus de 500 logements sont disponibles dans cette ville</p>
-      </div>
-      <div class="container">
-        <div
-          class="home"
-          style="background-image: url(images/hebergements/4_small/auberge.jpg)"
+      <div id="info">
+        <div class="infoBtn">
+          <span class="infoIcon"><i class="fas fa-info"></i></span>
+        </div>
+        <span class="infoText"
+          >Plus de 500 logements sont disponibles dans cette ville</span
         >
-          <a
-            href="images\hebergements\2_large\marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-          >
-          </a>
-          <div class="description">
-            <strong>Auberge la Cannebière</strong><br />Nuit à partir de
-            <strong>25€</strong>
+      </div>
+
+      <div id="container">
+        <div class="containerName">
+          <p><strong>Hébergement à Marseille</strong></p>
+          <div class="cardContainer">
+            <div class="home">
+              <a href="#"
+                ><img
+                  src="images\hebergements\4_small\marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                /><br /><span class="hotelName"
+                  ><strong>Auberge la Cannebière</strong><br />Nuit à partir de
+                  <strong>25€</strong></span
+                ></a
+              >
+              <div class="stars">
+                <div class="starsUp">
+                  <i class="fas fa-star"></i><i class="fas fa-star"></i
+                  ><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                </div>
+                <div class="starsDown"><i class="fas fa-star"></i></div>
+              </div>
+            </div>
+
+            <div class="home">
+              <a href="#"
+                ><img
+                  src="images\hebergements\4_small\fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+                /><br /><span class="hotelName"
+                  ><strong>Hôtel du port</strong><br />Nuit à partir de
+                  <strong>52€</strong></span
+                ></a
+              >
+              <div class="stars">
+                <div class="starsUp">
+                  <i class="fas fa-star"></i><i class="fas fa-star"></i
+                  ><i class="fas fa-star"></i><i class="fas fa-star"></i
+                  ><i class="fas fa-star"></i>
+                </div>
+              </div>
+            </div>
+
+            <div class="home">
+              <a href="#"
+                ><img
+                  src="images\hebergements\4_small\reisetopia-B8WIgxA_PFU-unsplash.jpg"
+                /><br /><span class="hotelName"
+                  ><strong>Hôtel Les mouettes</strong><br />Nuit à partir de
+                  <strong>76€</strong></span
+                ></a
+              >
+              <div class="stars">
+                <div class="starsUp">
+                  <i class="fas fa-star"></i><i class="fas fa-star"></i
+                  ><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                </div>
+                <div class="starsDown"><i class="fas fa-star"></i></div>
+              </div>
+            </div>
+
+            <div class="home">
+              <a href="#"
+                ><img
+                  src="images\hebergements\4_small\annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                /><br /><span class="hotelName"
+                  ><strong>Hôtel de la mer</strong><br />Nuit à partir de
+                  <strong>46€</strong></span
+                ></a
+              >
+              <div class="stars">
+                <div class="starsUp">
+                  <i class="fas fa-star"></i><i class="fas fa-star"></i
+                  ><i class="fas fa-star"></i>
+                </div>
+                <div class="starsDown">
+                  <i class="fas fa-star"></i><i class="fas fa-star"></i>
+                </div>
+              </div>
+            </div>
+
+            <div class="home">
+              <a href="#"
+                ><img
+                  src="images\hebergements\4_small\nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+                /><br /><span class="hotelName"
+                  ><strong>Auberge Le Panier</strong><br />Nuit à partir de
+                  <strong>23€</strong></span
+                ></a
+              >
+              <div class="stars">
+                <div class="starsUp">
+                  <i class="fas fa-star"></i><i class="fas fa-star"></i
+                  ><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                </div>
+                <div class="starsDown">
+                  <i class="fas fa-star"></i>
+                </div>
+              </div>
+            </div>
+
+            <div class="home">
+              <a href="#"
+                ><img
+                  src="images\hebergements\4_small\febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                /><br /><span class="hotelName"
+                  ><strong>Hôtel chez Amina</strong><br />Nuit à partir de
+                  <strong>96€</strong></span
+                ></a
+              >
+              <div class="stars">
+                <div class="starsUp">
+                  <i class="fas fa-star"></i><i class="fas fa-star"></i
+                  ><i class="fas fa-star"></i><i class="fas fa-star"></i
+                  ><i class="fas fa-star"></i>
+                </div>
+                <div class="starsDown"></div>
+              </div>
+            </div>
           </div>
+          <p><strong>Afficher plus</strong></p>
         </div>
       </div>
     </div>
